Re-apply fix to not close curated application